webshim in but not optimized, as-app structure

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ defaults:
       layout: "medcenter"
   -
     scope:
-      path: ""
+      path: "as-app-mocks"
       type: "as-app-mocks"
     values:
       layout: "as-app"
