lighten JS load
since we're dropping live form validation, webshims isn't needed, nor jquery

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "authors": [
     "Carl Uebelhart <carl@erutan.net>"
   ],
-  "license": "MIT",
+  "license": "UCLA",
   "private": true,
   "ignore": [
     "**/.*",
