--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,7 @@ PORT: 8000
 COMPATIBILITY:
   - "last 2 versions"
   - "ie >= 9"
+  - "ios >= 7"
 
 # UnCSS will use these settings
 UNCSS_OPTIONS:
@@ -25,11 +26,16 @@ PATHS:
   # Paths to Sass libraries, which can then be loaded with @import
   sass:
     - "bower_components/foundation-sites/scss"
-    - "bower_components/motion-ui/src"
+    - "bower_components/motion-ui/srcs"
     - "bower_components/sass-toolkit/stylesheets"
-  # Paths to JavaScript libraries, which are compined into one file
+    - "bower_components/font-awesome/scss"
+  # Paths to (JS) assets that need to be loaded separately
+  bowerDirectLinked:
+    # - "bower_components/zxcvbn/dist/zxcvbn.js"
+    # - "bower_components/zxcvbn/dist/zxcvbn.js.map"
+  # Paths to JavaScript libraries, which are combined into one file
   javascript:
-    # Libraries requried by Foundation
+    # Libraries required by Foundation
     - "bower_components/jquery/dist/jquery.js"
     - "bower_components/what-input/what-input.js"
     # Core Foundation files
@@ -38,7 +44,27 @@ PATHS:
     # Individual Foundation components
     # If you aren't using a component, just remove it from the list
     - "bower_components/foundation-sites/js/foundation.abide.js"
+    # - "bower_components/foundation-sites/js/foundation.accordion.js"
+    # - "bower_components/foundation-sites/js/foundation.accordionMenu.js"
+    # - "bower_components/foundation-sites/js/foundation.drilldown.js"
+    # - "bower_components/foundation-sites/js/foundation.dropdown.js"
+    # - "bower_components/foundation-sites/js/foundation.dropdownMenu.js"
+    # - "bower_components/foundation-sites/js/foundation.equalizer.js"
+    # - "bower_components/foundation-sites/js/foundation.interchange.js"
+    # - "bower_components/foundation-sites/js/foundation.magellan.js"
+    # - "bower_components/foundation-sites/js/foundation.offcanvas.js"
+    # - "bower_components/foundation-sites/js/foundation.orbit.js"
+    # "bower_components/foundation-sites/js/foundation.responsiveMenu.js"
+    # - "bower_components/foundation-sites/js/foundation.responsiveToggle.js"
+    # - "bower_components/foundation-sites/js/foundation.reveal.js"
+    # - "bower_components/foundation-sites/js/foundation.slider.js"
+    # - "bower_components/foundation-sites/js/foundation.sticky.js"
+    # - "bower_components/foundation-sites/js/foundation.tabs.js"
+    # - "bower_components/foundation-sites/js/foundation.toggler.js"
+    # - "bower_components/foundation-sites/js/foundation.tooltip.js"
+    # - "bower_components/foundation-sites/js/foundation.zf.responsiveAccordionTabs.js"
     # Paths to your own project code are here
-    - "src/assets/js/placeholders.min.js"
-    - "src/assets/js/spin.min.js"
+    # - "bower_components/countdown/dest/jquery.countdown.js"
+    - "bower_components/spin.js/spin.js"
+    - "src/assets/js/!(app).js"
     - "src/assets/js/app.js"
