--- a/package.json
+++ b/package.json
@@ -1,37 +1,26 @@
 {
   "name": "foundation-zurb-template",
   "version": "1.0.0",
-  "description": "UCLA Template based off of ZURB's Foundation for Sites.",
+  "description": "Official ZURB Template for Foundation for Sites.",
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build --production"
+    "build": "gulp build --production",
+    "deploy-build": "gulp build --production --no_styleguide --no_uncss",
+    "update-git-ref": "sed -i '' \"s/foundation-sites#[a-z0-9]*/foundation-sites#$(cd bower_components/foundation-sites; git rev-parse HEAD)/\" bower.json"
   },
-  "author": "Carl Uebelhart <carl@erutan.net>",
-  "license": "UC",
+  "author": "ZURB <foundation@zurb.com>",
+  "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.4.0",
-    "babel-eslint": "^5.0.0",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.5.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.5.0",
-    "babel-plugin-transform-es2015-classes": "^6.5.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.5.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
-    "babel-plugin-transform-es2015-parameters": "^6.5.0",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
-    "babel-plugin-transform-es2015-spread": "^6.5.2",
-    "babel-plugin-transform-es2015-template-literals": "^6.5.2",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.7.2",
     "browser-sync": "^2.10.0",
     "gulp": "gulpjs/gulp#4.0",
-    "gulp-accessibility": "^1.2.1",
-    "gulp-arialinter": "^0.0.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
-    "gulp-cli": "gulpjs/gulp-cli#4.0",
+    "gulp-clean-css": "^3.3.1",
+    "gulp-cli": "^1.2.1",
     "gulp-concat": "^2.5.2",
-    "gulp-cssnano": "^2.1.0",
     "gulp-extname": "^0.2.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.2.1",
@@ -48,11 +37,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ucla/foundation-zurb-template.git"
+    "url": "https://github.com/zurb/foundation-zurb-template.git"
   },
   "bugs": {
-    "url": "https://github.com/ucla/foundation-sites/issues",
+    "url": "https://github.com/zurb/foundation-sites/issues",
     "email": "carl@erutan.net"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "private": true
 }
